objects/AR_SFObj1__c.object
<CustomObject>
    <description>Test Commentttttt</description>
    <fields>
        <fullName>ARSFField4__c</fullName>
        <description>test123412ttt</description>
        <label>ARSFField4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SFField1__c</fullName>
        <description>Add Desc AR-SFField1tyest5</description>
        <label>AR-SFField1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_SFField2__c</fullName>
        <description>Add  Desc221rrrr</description>
        <label>AR-SFField2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>f3__c</fullName>
        <description>test1111111111rr</description>
        <label>f3</label>
        <type>Date</type>
    </fields>
    <label>AR-SFObj1</label>
    <nameField>
        <label>AR-SFObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARSFObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARSFvalidationRule1</fullName>
        <active>true</active>
        <description>Add comment for this Validation.</description>
        <errorConditionFormula>ISBLANK( AR_SFField1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
</CustomObject>